# hemc_mac

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements-local.txt  requirements.txt  setup.cfg  sftp_mac.py
src/hemc_mac/: __init__.py  __main__.py  _version.py  ftp_client.py  local_file_process.py  remote_file_process.py  serial_to_mac.py  setmac_dbus.py  sftp_client.py
tests/: test_hemc_mac.py
