[metadata]
name = hemc_mac
author = Oleksandr Shevchenko
author_email = shevchenko.adb@gmail.com
license = MIT License
description = Tool for devices MAC address serialization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oshevchenko/hemc_mac
platforms = any
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.8

[options]
package_dir =
	= src
python_requires = >=3.8
packages = hemc_mac

[options.package_data]
hemc_mac = py.typed

[egg_info]
tag_build =
tag_date = 0
